[trocado] nome de funções

--- a/Drum Kit/css/drumkit.css
+++ b/Drum Kit/css/drumkit.css
@@ -28,7 +28,7 @@ body{
   text-shadow: 0 0 .5rem black;
 }
 
-.playing{
+.efeito{
   transform: scale(1.2);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
